--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "MamadTaheri68",
+  "author": "Thowfeek Salim",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
